unreleased

* dupeBuffer/anchor navigation no longer forks buffer process
* support VT420
* support DEC special graphics in ASCII mode
* support all VP8L indexed color transforms
* support color, width, align, noshade properties on HR element
* add status.format-mode (sets formatting of status bar)
* add toggleLinkHintsAutoClick command (by Arthur Jacquin)
* improve keybinding format (mostly backwards-compatible; see cha-config(5))
* remove display.force-clear (shouldn't have ever been needed)
* remove display.query-da1 (no longer needed)
* remove deprecated special case in pager.load() with trailing newline
* remove deprecated parentBuffer, prevSiblingBuffer, nextSiblingBuffer actions
* make terminal querying asynchronous
* work around FreeBSD vt(4) freezing on startup
* optimize out Sixel repaints when scrolling
* drop excessive frames when the terminal/link cannot keep up
* fix cached images not being cleared when a buffer is deleted
* fix a NULL deref in jebp
* fix y/n being truncated out of long ask() prompts
* fix media queries not being re-evaluated on windowChange
* fix load info not being set on cycling between buffers
* fix color blending over body bgcolor
* fix matching of nested subsequent sibling combinator
* fix various CSS image sizing bugs
* fix bugs in our libregexp UTF-8 patch
* fix various proxy authentication bugs
* fix [attr|=value] and :lang() pseudo-class bugs
* fix localStorage.key function
* fix gotoLine malfunctioning in select menu
* fix bug in negation of the minimum layout unit value

0.3.0 (2025.11.21)

UI additions
* wheel-scroll, side-wheel-scroll config options (by Tim Culverhouse)
* new API functions Pager#traverse, Pager#navDirection, Pager#revDirection,
  Buffer#find
* bracketed paste - pasting a URL now opens the URL bar automatically
* "copy URL", "copy selection" now works over SSH when OSC 52 is supported
* "hints mode" for jumping to specific links on the page (default