@@ -1621,6 +1621,38 @@ Otherwise, open the current buffer\(cqs contents as HTML.
 T}
 _
 T{
+s s
+T}@T{
+\f[CR]saveScreen\f[R]
+T}@T{
+Save the rendered buffer to a file.
+T}
+_
+T{
+s S
+T}@T{
+\f[CR]saveSource\f[R]
+T}@T{
+Save the buffer\(cqs source to a file.
+T}
+_
+T{
+s e
+T}@T{
+\f[CR]editScreen\f[R]
+T}@T{
+Open the rendered buffer in an editor.
+T}
+_
+T{
+s E
+T}@T{
+\f[CR]editSource\f[R]
+T}@T{
+Open the buffer\(cqs source in an editor.
+T}
+_
+T{
 D
 T}@T{
 \f[CR]discardBuffer\f[R]
