@@ -96,7 +96,9 @@ beginning)
 beginning)
 <li><kbd>w</kbd>, <kbd>b</kbd>: move cursor to next/previous word
 <li><kbd>\</kbd>: toggle page source view
-<li><kbd>s E</kbd>: see source in editor
+<li><kbd>s e</kbd>: show rendered page in editor
+<li><kbd>s E</kbd>: show page source in editor
+<li><kbd>s s</kbd>: save rendered page to file
 <li><kbd>s S</kbd>: save current page's source
 <li><kbd>s I</kbd>: save image
 <li><kbd>s RET</kbd>: save page that link points to
